# eurobot_2025

./: .gitignore  README.md
dockerfiles/: dockerfile_init  dockerfile_opencv  dockerfile_raspbian  dockerfile_startup  dockerfile_ubuntu  dockerfile_ubuntu_zdc
esp32_utils/: platformio.ini
esp32_utils/lib/Mesura_ADC/: Mesura_ADC.c  Mesura_ADC.h
esp32_utils/lib/Placa/: Placa.h
esp32_utils/src/: main.cpp
esp32_utils/src/actuators/: esp32_1.cpp  esp32_2.cpp  servos.cpp
esp32_utils/src/controller/: check_imu.cpp  esp32_01.cpp  esp32_01_emergency.cpp  esp32_01_emergencyv2.cpp  esp32_01_safety.cpp  esp32_01_v2.cpp  esp32_02_emergency.cpp  esp32_02_i.cpp  esp32_02_safety.cpp  esp32_02_t.cpp
esp32_utils/src/pid/: ESP32PIDMotor.cpp  ESP32PIDMotor.hpp  PID_DIG_ESP.cpp  (+1 more)
esp32_utils/test/: servos_torete.py  t_communication.cpp
eurobot_ws/install/: local_setup.sh  setup.sh
eurobot_ws/log/: latest_build
eurobot_ws/src/: cameraRobot.py
eurobot_ws/src/computing_zone/aruco_detection/: CMakeLists.txt
eurobot_ws/src/computing_zone/aruco_detection/calibration_values/: calibration_output.txt  camera_matrix_output.txt  distortion_coefficients_output.txt  robot_positions.csv
eurobot_ws/src/computing_zone/aruco_detection/src/: aruco_detection.cpp  camera_calibration.cpp  image_prepare.cpp  pose_estimation.cpp  pose_estimation_v.cpp  tr_homography.cpp
eurobot_ws/src/tests/src/arucos_detection/: CMakeLists.txt  t_basic_aruco_detection.cpp  t_basic_calibration.cpp
eurobot_ws/src/utils/: CMakeLists.txt  package.xml  setup.py
eurobot_ws/src/utils/msg/: MotorPower.msg
eurobot_ws/src/utils/scripts/: serial_communication.py
eurobot_ws/src/utils/src/: serial_communication.py
gui/frames/: frame00.py  frame01.py  frame02.py  frame03.py  main_frame.py
(+254 files in other folders)
